# cat-deal-radar

./: .gitignore  PRODUCT.md  README.md  pyproject.toml
.github/workflows/: ci.yml  daily-report.yml  radar.yml
app/: __init__.py  brand_candidates.py  daily_report.py  feedback_sync.py  main.py  pipeline.py  settings.py  sku_catalog.py  web_export.py
app/brand_normalization/: __init__.py  engine.py
app/configuration/: __init__.py  feishu_base.py  loader.py
app/crawler/: __init__.py  douban.py  parser.py  smzdm.py
app/database/: __init__.py  migrations.py  models.py  repository.py
app/deal_detector/: __init__.py  comment_analyzer.py  keyword_rules.py  llm_classifier.py
app/feedback/: __init__.py  handlers.py  links.py
config/: brands.yaml  categories.yaml  preferences.yaml  settings.yaml  skus.yaml
data/: cat_deal_radar.sqlite  latest-deals.json
docs/: CODING_PRINCIPLES.md  DEVELOPMENT_PLAN.md  PRD.md  TDD.md  TODO.md
feedback-worker/: README.md  package-lock.json  package.json  wrangler.toml
prompts/: classify_deal.md  normalize_brand.md  recommendation.md
tests/: test_brand_candidates.py  test_brand_normalization.py  test_configuration_loader.py  test_daily_report.py  test_deal_detector.py  test_douban_crawler.py  test_end_to_end.py  test_feedback.py  test_feedback_sync.py  test_feishu_brand_candidates.py  test_feishu_sender.py  test_main.py  test_notification.py  test_pipeline.py  test_preference_learning.py  test_recommendation.py  test_repository.py  test_sku_catalog.py  test_smzdm_crawler.py  test_web_export.py  test_wework_sender.py
(+11 files in other folders)
