[project]
name = "cat-deal-radar"
version = "0.1.0"
description = "Personal cat deal monitoring and recommendation agent."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.2",
    "structlog>=24.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.8.0",
]

[project.scripts]
cat-deal-radar = "app.main:main"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".uv-cache"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
